# gemini-vision

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.compliance/: OSS-COMPLIANCE-SUMMARY.md  SBOM.spdx.json  license-compliance-report.txt  secrets-scan-report.txt  security-baseline-report.txt
.github/workflows/: cd.yml  ci.yml  oss-hygiene.yml
examples/: claude_desktop_config.json  test-photo-alt.txt  test-photo.avif  test_client.py  usage.md  usage_examples.py
src/: index.ts
src/gemini_vision/: __init__.py  server.py
src/services/: openrouter.ts
src/types/: index.ts
src/utils/: config.ts  image.ts  logger.ts
tests/: test_server.py
