[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-vision-mcp"
version = "1.0.0"
description = "MCP server for image analysis using Gemini 2.5 Pro through OpenRouter"
authors = [
    {name = "Progressus Software Ltd.", email = "oss@progressus-software.com"}
]
maintainers = [
    {name = "Progressus Software Ltd.", email = "oss@progressus-software.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=5.0.0",
]

[project.scripts]
gemini-vision-mcp = "gemini_vision.server:main"

[project.urls]
Homepage = "https://github.com/stanley-marketing/gemini-vision-mcp"
Repository = "https://github.com/stanley-marketing/gemini-vision-mcp"
Issues = "https://github.com/stanley-marketing/gemini-vision-mcp/issues"
Documentation = "https://github.com/stanley-marketing/gemini-vision-mcp#readme"
"Source Code" = "https://github.com/stanley-marketing/gemini-vision-mcp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true